--- a/SocialNetwork.Web/Views/_ViewImports.cshtml
+++ b/SocialNetwork.Web/Views/_ViewImports.cshtml
@@ -8,6 +8,7 @@
 @using SocialNetwork.Web.Models.Comment
 @using SocialNetwork.Web.Models.Messanger
 @using SocialNetwork.Web.Models.Events
+@using SocialNetwork.Web.Models.InterestViewModels
 @using SocialNetwork.Web.Models
 @using SocialNetwork.Data.Entities
 @using SocialNetwork.Data.Entities.Enums
